[package]
name = "sprig"
version = "0.2.0"
authors = ["Florian Merz <me@fiji-flo.de>"]
description = "Template functions for Go templates for Rust"
license = "MIT"
repository = "https://github.com/fiji-flo/sprig-rust"
documentation = "https://docs.rs/crate/sprig"
keywords = ["golang", "template", "templating", "sprig"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
gtmpl = "0.6"
gtmpl_value = "0.4"
data-encoding = "2.0"
itertools = "0.10"
rand = "0.8"
